--- a/site/checkout.html
+++ b/site/checkout.html
@@ -19,7 +19,7 @@
 		<script src="../assets/js/cart.js" type="text/javascript"></script> <!-- Import JavaScript shopping cart scripts -->
 		<script src="../assets/js/page_checkout.js" type="text/javascript"></script> <!-- Import JavaScript checkout page scripts -->
 		<script src="../assets/js/page_checkout_confirm.js" type="text/javascript"></script> <!-- Import JavaScript checkout confirmation page scripts -->
-		<script type="text/javascript">beginLoad_confirm();</script>
+		<script type="text/javascript">beginLoad();</script>
 	</head>
 	<!-- Close HEAD tag -->
 	<body onLoad="populateCountries('country', 'state'); finishLoad(); showDocument();">
