--- a/site/home.html
+++ b/site/home.html
@@ -1,185 +1,132 @@
-<!DOCTYPE html>
-<html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<title>Broken Hill Surf Shop Online</title>
-		<link rel="shortcut icon" href="../assets/images/favicon.ico" />
-		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-		<link rel="stylesheet" type="text/css" href="../assets/css/home.css">
-		<script src="../assets/js/util.js" type="text/javascript"></script>
-		<script src="../assets/js/cart.js" type="text/javascript"></script>
-		<!--jQuery -->
-		<script src="../assets/js/jquery.min.js" type="text/javascript"></script>
-		<!--
-			Nivo Slider
-			http://docs.dev7studios.com/jquery-plugins/nivo-slider
-			-->
-		<link rel="stylesheet" href="../assets/css/nivo-slider.css" type="text/css" />
-		<link rel="stylesheet" href="../assets/css/nivo-slider-theme.css" type="text/css" />
-		<script src="../assets/js/jquery.nivo.slider.pack.js" type="text/javascript"></script>
-		<script type="text/javascript">
-			$(window).load(function () {
-			  $('#slider').nivoSlider({
-			    controlNav: false,
-			    pauseOnHover: true,
-			    pauseTime: 8000
-			  });
-			});
-		</script>
-	</head>
-	<body onload="showDocument();">
-		<div id="container">
-			<!--Header (Logo) and Navigation Bar-->
-			<div id="header">
-				<header class="header headergradient">
-					<div id="database">
-						<a href="../Broken Hill Surf Shop Database.accdb">
-							<img src="../assets/images/accessdb.png"/>
-							<p class="nomargin">Database</p>
-						</a>
-					</div>
-					<a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a>
-					<div id="hcart"><a href="cart.html">Shopping Cart (<span id="cart_count">0</span>)</a></div>
-					<script type="text/javascript">cart.updateCartCount(true);</script>
-					<!--START Navigation Bar-->
-					<div id="navigation-bar">
-						<ul>
-							<li class="active"><a href="home.html">Home</a> </li>
-							<li><a href="products.html">Products</a> </li>
-							<li><a href="about.html">About</a> </li>
-							<li><a href="contact.html">Contact</a> </li>
-							<li class="last"><a href="news.html">News</a> </li>
-						</ul>
-					</div>
-					<!--END Navigation Bar--> 
-				</header>
-			</div>
-			<div id="content">
-				<!--START Nivo Slider-->
-				<div class="slider-wrapper ribbon">
-					<div id="slider" class="nivoSlider">
-						<img src="../assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" title="Welcome to Broken Hill Surf Shop!"/>
-						<img src="../assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2" title="Supplying surf gear and accessories since '14!"/>
-						<img src="../assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3" title="#slider_3" />
-						<img src="../assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title='"Highest quality surf equipment at the best price!"'>
-						<img src="../assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="#slider_5"/>
-						<img src="../assets/images/nivo-slider/slides/slide_6.jpg" alt="Slide 6" title="Broken Hill Surf Shop caters for everyone."/>
-						<img src="../assets/images/nivo-slider/slides/slide_7.jpg" alt="Slide 7" title="#slider_7"/>
-						<img src="../assets/images/nivo-slider/slides/slide_8.jpg" alt="Slide 8" title="#slider_8"/>
-					</div>
-					<!-- Slider Captions -->
-					<div id="slider_3" class="nivo-html-caption">A variety of high-quality surfboards are just at your fingertips. <a href="surfing">Find yours today</a>!</div>
-					<div id="slider_5" class="nivo-html-caption">Have an interest in scuba diving or snorkeling? <a href="scubasnorkelinggear">We're here for you</a>!</div>
-					<div id="slider_7" class="nivo-html-caption">Broken Hill Surf Shop caters for everyone. <em style="vertical-align: middle; font-size: 10px">And everything...</em></div>
-					<div id="slider_8" class="nivo-html-caption">Equipment for families <a href="recreation">also available</a>!</div>
-				</div>
-				<!--END Nivo Slider-->
-				<div>
-					<h1 style="margin: 10px;">Top Products</h1>
-					<div id="infocolumns">
-						<div>
-							<div>
-								<h2 class="nomargin">Mid-length Surfboard</h2>
-							</div>
-							<div><img class="himage" src="products/50020002/product.jpg"/></div>
-							<div>$419</div>
-							<div>
-								Great for surfers wanting to catch waves easily while still retaining a certain degree of maneuverability.
-								<p><a href="products.html?50020002">Read More ...</a></p>
-							</div>
-						</div>
-						<div>
-							<div>
-								<h2 class="nomargin">Wet Suit</h2>
-							</div>
-							<div><img class="himage" src="products/50130013/product.jpg"/></div>
-							<div>$439</div>
-							<div>
-								High-quality flexible rubber body clothing for underwater diving
-								<p><a href="products.html?50130013">Read More ...</a></p>
-							</div>
-						</div>
-						<div>
-							<div>
-								<h2 class="nomargin">Sunscreen</h2>
-							</div>
-							<div><img class="himage" src="products/50490049/product.jpg"/></div>
-							<div>$25</div>
-							<div>
-								Protect your skin from harmful UV rays. Contains aloe vera extract to also nourish the skin.
-								<p><a href="products.html?50490049">Read More ...</a></p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<br>
-			<br> <!-- Personally I hate line breaks, but given the time I had to make this (aka, being out of my house for 80% of the duration of the holidays, and doing my history assignment in week 1 term 3 - Andrew -->
-			<br>
-			<div id="footer_wrapper" class="footergradient nomargin">
-				<!-- Footer wrapper (Whole page width) -->
-				<div id="footer" class="nomargin">
-					<!-- Footer (900px page center) -->
-					<!-- SITEMAP -->
-					<div id="infocolumns" class="borderbottom">
-						<!-- Info columns & because I don't like lists -->
-						<div>
-							<!-- Column 1 - Sites -->
-							<h1>site</h1>
-							<!-- Header -->
-							<p><a href="home.html">home</a> </p>
-							<!-- Link to home page -->
-							<p><a href="products.html">products</a> </p>
-							<!-- Link to products page -->
-							<p><a href="about.html">about</a> </p>
-							<!-- Link to about page -->
-							<p><a href="contact.html">contact</a> </p>
-							<!-- Link to contact page -->
-							<p><a href="news.html">news</a> </p>
-							<!-- Link to news page -->
-						</div>
-						<!-- Close column 1 -->
-						<div>
-							<!-- Column 2 - Product Categories -->
-							<h1>products</h1>
-							<!-- Header -->
-							<p><a href="surfing">surfing</a> </p>
-							<!-- Link to surfing products -->
-							<p><a href="clothing">clothing</a> </p>
-							<!-- Link to clothing products -->
-							<p><a href="protection">protection</a> </p>
-							<!-- Link to protective products -->
-							<p><a href="scubasnorkelinggear">scuba/snorkeling gear</a> </p>
-							<!-- Link to scuba and snorkeling gear -->
-							<p><a href="recreation">recreation</a> </p>
-							<!-- Link to recreational gear -->
-							<p><a href="accessories">accessories</a> </p>
-							<!-- Link to accessories -->
-						</div>
-						<!-- Close column 2 -->
-						<div>
-							<!-- Column 3 - Contact details -->
-							<h1>contact</h1>
-							<!-- Header -->
-							<p>email: contact@brokenhillsurf.com.au</p>
-							<!-- Email address - nonexistent -->
-							<p>facebook: brokenhillsurfshop</p>
-							<!-- Facebook page name - nonexistent -->
-							<p>twitter: @brokenhillsurfshop</p>
-							<!-- Twitter handle - nonexistent -->
-						</div>
-						<!-- Close column 3 -->
-					</div>
-					<!-- Close info columns -->
-				</div>
-				<!-- Close footer -->
-				<p>&copy; 2014 Andrew Wong & Ryan Oo</p>
-				<!-- Copyright -->
-			</div>
-			<!-- Close footer wrapper -->
-		</div>
-		<!-- Close wrapper div -->
-	</body>
-	<!-- Close BODY tag -->
-</html>
-<!-- Close HTML tag -->
+<!DOCTYPE html> <!-- Delcare document type -->
+<html lang="en-au"> <!-- HTML tag; set language to English Australia -->
+  <head> <!-- HEAD tag -->
+    <meta http-equiv="Content-Type" content="text/html" charset="utf-8"> <!-- Declare document to be a html document, and set the character set to UTF-8 -->
+    <title>Broken Hill Surf Shop Online</title> <!-- Set the title of the webpage to Broken Hill Surf Shop Online -->
+    <link rel="shortcut icon" href="../assets/images/favicon.ico" /> <!-- Set the favourite icon (Website image in the tabs) -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/style.css"> <!-- Import global style sheets -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/home.css"> <!-- Import home page style sheets -->
+    <script src="../assets/js/util.js" type="text/javascript"></script> <!-- Import JavaScript utility scripts -->
+    <script src="../assets/js/cart.js" type="text/javascript"></script> <!-- Import JavaScript shopping cart scripts -->
+    <script src="../assets/js/jquery.min.js" type="text/javascript"></script> <!-- Import jQuery library. Downloaded the libary and put in locally incase the google cache servers can't be reached (eg at school; not entering proxy details -->
+<!-- START Nivo Slider
+      http://docs.dev7studios.com/jquery-plugins/nivo-slider
+-->
+    <link rel="stylesheet" href="../assets/css/nivo-slider.css" type="text/css" /> <!-- Import Nivo Slider styles -->
+    <link rel="stylesheet" href="../assets/css/nivo-slider-theme.css" type="text/css" /> <!-- Import Nivo Slider theme -->
+    <script src="../assets/js/jquery.nivo.slider.pack.js" type="text/javascript"></script> <!-- Import Nivo Slider JavaScript -->
+    <script type="text/javascript">
+	  /* Set options */
+      $(window).load(function () {
+        $('#slider').nivoSlider({
+          controlNav: false,
+          pauseOnHover: true,
+          pauseTime: 8000
+        });
+      });
+    </script>
+<!-- END Nivo Slider -->
+  </head> <!-- Close HEAD tag -->
+  <body onLoad="fixFooter(); showDocument();"> <!-- BODY tag; when the page finishes loading, call the function showDocument() function (found in the util.js) file). -->
+    <div id="container"> <!-- Wrapper div (For an anchored footer) -->
+<!-- #################################### -->
+<!-- # Header (Logo) and Navigation Bar # -->
+<!-- #################################### -->
+      <div id="header"> <!-- Header wrapper (Style defines the height and width, and other properties) -->
+        <div class="header headergradient"> <!-- Header class (inside wrapper) & gradient -->
+          <div id="database"> <!-- Database section on the top-left corner -->
+            <a href="../Broken Hill Surf Shop Database.accdb"><img src="../assets/images/accessdb.png"/><p class="nomargin">Database</p></a> <!-- Link to database w/ image & text -->
+          </div> <!-- Close database section -->
+          <a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a> <!-- Logo image with link back to homepage -->
+          <div id="hcart"><a href="cart.html">Shopping Cart (<span id="cart_count">0</span>)</a></div> <!-- Shopping cart div (Will usually only appear if there are items in the cart -->
+          <script type="text/javascript">cart.updateCartCount(true);</script> <!-- Update id _cart_count_ (Previous line) -->
+<!-- START Navigation Bar -->
+          <div id="navigation-bar"> <!-- Styles for navigation bar list -->
+            <ul> <!-- Create unordered list -->
+              <li><a href="home.html">Home</a> </li> <!-- List item linking to the home page -->
+              <li><a href="products.html">Products</a> </li> <!-- List item linking to the product page; Active page -->
+              <li><a href="about.html">About</a> </li> <!-- List item linking to the about page -->
+              <li><a href="contact.html">Contact</a> </li> <!-- List item linking to the contact page -->
+              <li class="last"><a href="news.html">News</a> </li> <!-- List item linking to the news page -->
+            </ul> <!-- Close list -->
+          </div> <!-- Close navigation bar -->
+<!-- END Navigation Bar --> 
+        </div> <!-- Closing header -->
+      </div> <!-- Close header -->
+      <div id="content"> <!-- Body wrapper (The actual content) -->
+        <div class="slider-wrapper ribbon"> <!--START Nivo Slider-->
+          <div id="slider" class="nivoSlider"> <!-- ... -->
+            <img src="../assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" title="Welcome to Broken Hill Surf Shop!"/><!-- ... -->
+            <img src="../assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2" title="Supplying surf gear and accessories since '14!"/> <!-- ... -->
+            <img src="../assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3" title="#slider_3" /> <!-- ... -->
+            <img src="../assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title='"Highest quality surf equipment at the best price!"'> <!-- ... -->
+            <img src="../assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="#slider_5"/> <!-- ... -->
+            <img src="../assets/images/nivo-slider/slides/slide_6.jpg" alt="Slide 6" title="Broken Hill Surf Shop caters for everyone."/> <!-- ... -->
+            <img src="../assets/images/nivo-slider/slides/slide_7.jpg" alt="Slide 7" title="#slider_7"/> <!-- ... -->
+            <img src="../assets/images/nivo-slider/slides/slide_8.jpg" alt="Slide 8" title="#slider_8"/> <!-- ... -->
+          </div> <!-- ... -->
+          <!-- Slider Captions -->
+          <div id="slider_3" class="nivo-html-caption">A variety of high-quality surfboards are just at your fingertips. <a href="surfing">Find yours today</a>!</div> <!-- ... -->
+          <div id="slider_5" class="nivo-html-caption">Have an interest in scuba diving or snorkeling? <a href="scubasnorkelinggear">We're here for you</a>!</div> <!-- ... -->
+          <div id="slider_7" class="nivo-html-caption">Broken Hill Surf Shop caters for everyone. <em style="vertical-align: middle; font-size: 10px">And everything...</em></div> <!-- ... -->
+          <div id="slider_8" class="nivo-html-caption">Equipment for families <a href="recreation">also available</a>!</div> <!-- ... -->
+        </div> <!--END Nivo Slider-->
+        <div> <!-- Top products -->
+          <h1 style="margin: 10px;">Top Products</h1> <!-- ... -->
+          <div id="infocolumns"> <!-- 3 columns -->
+            <div> <!-- Column 1 - Mid-length Surfboards -->
+              <div><h2 class="nomargin">Mid-length Surfboards</h2></div> <!-- ... -->
+              <div><a href="products.html?50020002"><img class="himage" src="products/50020002/product.jpg"/></a></div> <!-- ... -->
+              <div>$419</div> <!-- ... -->
+              <div>Great for surfers wanting to catch waves easily while still retaining a certain degree of maneuverability.<p><a href="products.html?50020002">Read More ...</a></p></div> <!-- ... -->
+            </div> <!-- Close column 1 -->
+            <div> <!-- Column 2 - Wet Suit -->
+              <div><h2 class="nomargin">Wet Suit</h2></div> <!-- ... -->
+              <div><a href="products.html?50130013"><img class="himage" src="products/50130013/product.jpg"/></a></div> <!-- ... -->
+              <div>$439</div> <!-- ... -->
+              <div>High-quality flexible rubber body clothing for underwater diving<p><a href="products.html?50130013">Read More ...</a></p></div> <!-- ... -->
+            </div> <!-- Close column 2 -->
+            <div> <!-- Column 3 - Sunscreen -->
+              <div><h2 class="nomargin">Sunscreen</h2></div> <!-- ... -->
+              <div><a href="products.html?50490049"><img class="himage" src="products/50490049/product.jpg"/></a></div> <!-- ... -->
+              <div>$25</div> <!-- ... -->
+              <div>Protect your skin from harmful UV rays. Contains aloe vera extract to also nourish the skin.<p><a href="products.html?50490049">Read More ...</a></p></div> <!-- ... -->
+            </div> <!-- Close column 3 -->
+          </div> <!-- Close info columns -->
+        </div> <!-- Close top products -->
+      </div> <!-- Close body wrapper -->
+      <div id="footer_wrapper" class="footergradient nomargin"> <!-- Footer wrapper (Whole page width) -->
+        <div id="footer" class="nomargin"> <!-- Footer (900px page center) -->
+<!-- START Sitemap -->
+          <div id="infocolumns" class="borderbottom"> <!-- Info columns & because I don't like lists -->
+            <div> <!-- Column 1 - Sites -->
+              <h1>site</h1> <!-- Header -->
+              <p><a href="home.html">home</a> </p> <!-- Link to home page -->
+              <p><a href="products.html">products</a> </p> <!-- Link to products page -->
+              <p><a href="about.html">about</a> </p> <!-- Link to about page -->
+              <p><a href="contact.html">contact</a> </p> <!-- Link to contact page -->
+              <p><a href="news.html">news</a> </p> <!-- Link to news page -->
+            </div> <!-- Close column 1 -->
+            <div> <!-- Column 2 - Product Categories -->
+              <h1>products</h1> <!-- Header -->
+              <p><a href="category_surfing.html">surfing</a> </p> <!-- Link to surfing products -->
+              <p><a href="category_clothing.html">clothing</a> </p> <!-- Link to clothing products -->
+              <p><a href="category_protection.html">protection</a> </p> <!-- Link to protective products -->
+              <p><a href="category_scubasnorkelinggear.html">scuba/snorkeling gear</a> </p> <!-- Link to scuba and snorkeling gear -->
+              <p><a href="category_recreation.html">recreation</a> </p> <!-- Link to recreational gear -->
+              <p><a href="category_accessories.html">accessories</a> </p> <!-- Link to accessories -->
+            </div> <!-- Close column 2 -->
+ <!-- END Sitemap -->
+            <div> <!-- Column 3 - Contact details -->
+              <h1>contact</h1> <!-- Header -->
+              <p>email: contact@brokenhillsurf.com.au</p> <!-- Email address - nonexistent -->
+              <p>facebook: brokenhillsurfshop</p> <!-- Facebook page name - nonexistent -->
+              <p>twitter: @brokenhillsurfshop</p> <!-- Twitter handle - nonexistent -->
+            </div> <!-- Close column 3 -->
+          </div> <!-- Close info columns -->
+        </div> <!-- Close footer -->
+        <p>&copy; 2014 Andrew Wong & Ryan Oo</p> <!-- Copyright -->
+      </div> <!-- Close footer wrapper -->
+    </div> <!-- Close wrapper div -->
+  </body> <!-- Close BODY tag -->
+</html> <!-- Close HTML tag -->
