Fix links... throwback!

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <hr color="#77787A" />
       <p style="font-size: 24px;">Unfortunately, Internet Explorer just doesn't work. (Styles get broken)<br />
         Please use a different web browser to continue browsing Broken Hill Surf Shop.<br />
-        To view a working online copy (via GitHub), <a href="http://bearbear12345.github.io/school_2014_9IPT/site/home.html">click here.</a> 
+        To view a working online copy (via GitHub), <a href="//featherbear.github.io/STHS_9IPT_2014/site/home.html">click here.</a> 
       </p>
       <p style="font-size: 72px">Consider using</p>
       <p><a href="http://www.mozilla.org/firefox/"><img src="assets/images/badbrowser_assets/firefox.png" height="150" alt="Mozilla Firefox logo" /></a></p>
@@ -83,7 +83,7 @@
       <p>If you are using another browser (Opera? I don't know), I apologize for the inconvenience, however as I have only confirmed the site to be fully functioning on Mozilla Firefix, some elements of this site may not work.</p>
       <p>Otherwise, welcome to Broken Hill Surf Shop and enjoy your stay!</p>
       <p>Regards, Andrew Wong</p>
-      <p style="margin: 0"><a href="http://bearbear12345.github.io/school_2014_9IPT"><strong>Click here to go the the online version</strong></a></p>
+      <p style="margin: 0"><a href="//featherbear.github.io/STHS_9IPT_2014"><strong>Click here to go the the online version</strong></a></p>
       OR
       <p style="margin: 0"><a href="site/home.html"><strong>Click here to continue browsing locally (Expect things to not work if you are not using Firefox)</strong></a></p>
     </div>
