--- a/site/home.html
+++ b/site/home.html
@@ -27,7 +27,7 @@
     </script>
 <!-- END Nivo Slider -->
   </head> <!-- Close HEAD tag -->
-  <body onLoad="fixFooter(); showDocument();"> <!-- BODY tag; when the page finishes loading, call the function showDocument() function (found in the util.js) file). -->
+  <body> <!-- BODY tag -->
     <div id="container"> <!-- Wrapper div (For an anchored footer) -->
 <!-- #################################### -->
 <!-- # Header (Logo) and Navigation Bar # -->
@@ -129,4 +129,8 @@
       </div> <!-- Close footer wrapper -->
     </div> <!-- Close wrapper div -->
   </body> <!-- Close BODY tag -->
+  <script type="text/javascript">
+    fixFooter(); 
+    showDocument();
+  </script>
 </html> <!-- Close HTML tag -->
